- Updated demo code and documentation. Works perfectly now and sections 3&4 are in sync.

--- a/3. Libraries and Frameworks/demo-complete/css/style.css
+++ b/3. Libraries and Frameworks/demo-complete/css/style.css
@@ -19,6 +19,14 @@ button#refreshbtn {
     display:none;
 }
 
+img#selected-img{
+    width:150px;
+    height:150px;
+    padding:20px;
+    display:none;
+    margin: 0 auto;
+}
+
 h2#page-header {
     padding-top:20px;
     padding-bottom:20px;
